# radar-srds-2024

./: .gitignore  README.md  flake.nix
exps/: README.md  patch_elfs.sh  proto.py  pyproject.toml
exps/baselines/bertoli2022/: baselines.py  baselines_reduced.py  client.py  pyproject.toml  server.py
exps/baselines/bertoli2022/results/: sampled_ae  sampled_ae_efc
exps/baselines/bertoli2022/utils/: model.py
exps/data/: README.md
exps/lib/efc/: efc-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl  efc-0.1.0-cp310-cp310-manylinux_2_35_x86_64.whl
exps/results/: analyze.ipynb  analyze_cluster.ipynb  analyze_poisoning.ipynb  bertoli.json  popoola_mlp.ipynb
exps/results/baselines/: baselines.ipynb
exps/results/centralized/: centralized.ipynb  metrics.json  metrics_full.json  metrics_sampled.json
exps/results/fedavg/benign/: distribution.json  metrics.json
exps/results/fedavg_per_dataset/: processing.ipynb
exps/results/fedavg_per_dataset/target=targeted,scenario=stealth0.1,distribution=lone_botiot,xp.seed=56/: metrics.json
exps/results/seed1138/: multirun.yaml  readme.md
exps/results/trustfids/: trustfids.ipynb
exps/trustfids/: __main__.py
exps/trustfids/client/: __init__.py  base.py  learners.py  metrics.py  model.py
exps/trustfids/clustering/: cluster.py  cluster_logger.py  matrice_gen.py  utils.py  zkclustering.py
exps/trustfids/conf/: config.yaml  config_test.yaml
exps/trustfids/dataset/: __init__.py  common.py  nfv2.py  poisoning.py
exps/trustfids/reputation/: abstract.py  history.py  reput.py  reput_logger.py  similarity.py  utils.py
exps/trustfids/server/: server.py  server_test.py  strategy.py  utils.py  utils_test.py
exps/trustfids/utils/: analyze.py  callbacks.py  centralized.py  create_adversary.py  decorators.py  distribution.py  gpu.py  helpers.py  log.py  parsing.py  plot_cdf.py  plot_cluster.py  plot_poisoning.py  plot_reput.py  plot_utils.py  plots.py  results.py  setup.py  stats_utils.py  typing.py
exps/trustfids/xeval/: __main__.py
(+3647 files in other folders)
